<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".AttentionTestIntro">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:background="@color/blue"
        >
        <ImageView
            android:id="@+id/imagehome"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            app:srcCompat="@drawable/header_home"
            android:layout_marginRight="20dp"
            />
        <ImageView
            android:id="@+id/imagesafari"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/header_safari"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow"
            android:orientation="horizontal"

            android:padding="5dp">

            <TextView
                android:id="@+id/tv_state"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:padding="5dp"
                android:text="@string/waiting_for_state"
                android:textColor="@color/blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_attention"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/waiting_for_attention_signal"
                android:textColor="@color/blue"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/tv_meditation"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/waiting_for_meditation_signal"
                android:textColor="@color/blue"
                android:textSize="15dp" />


        </LinearLayout>

        <ScrollView

            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            android:layout_height="400dp"
            android:layout_marginHorizontal="100dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:rotationX="0">
                <TextView
                    android:id="@+id/textView＿connect_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:lineHeight="50dp"
                    android:background="@drawable/scrollview_shape_round"
                    android:padding="100dp"
                    android:letterSpacing="0.3"
                    android:text="@string/connect_intro"
                    android:textSize="40px" />
                <TextView
                    android:id="@+id/textView＿article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:lineHeight="50dp"
                    android:background="@drawable/scrollview_shape_round"
                    android:padding="100dp"
                    android:letterSpacing="0.3"
                    android:text="@string/article"
                    android:textSize="40px"
                    android:visibility="gone"/>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_connect"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:radius="200dp"
                android:background="@drawable/button_yellow_shape_round"
                android:layout_marginRight="20dp"
                android:textColor="@color/blue"
                android:text="開始測驗" />

<!--            <Button-->
<!--                android:id="@+id/btn_start_monitoring"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@color/blue"-->
<!--                android:layout_marginRight="20dp"-->
<!--                android:textColor="#ffffff"-->
<!--                android:text="@string/start_monitoring" />-->

            <Button
                android:id="@+id/btn_stop_monitoring"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/button_shape_round"
                android:textColor="#ffffff"

                android:text="@string/stop_monitoring" />

<!--            <Button-->
<!--                android:id="@+id/btn_disconnect"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:text="@string/disconnect" />-->


        </LinearLayout>

    </LinearLayout>

</LinearLayout>